2010-Nov-02     caf     Tag V02-08-05.
2010-Sep-20	weaver	Tag V02-08-00.	Added Cspad ElementIterator and Config/ElementV2.
2010-Sep-1	weaver	Tag V02-07-00.  Cspad definitions are stable now.
2010-Aug-10	weaver  Tag V02-06-00.  Added LUSI diagnostic FEX data and config types.
2010-Jun-24	weaver			Added Cspad preliminary definitions.
2010-Jun-15	weaver  Tag V02-04-00.  Added value method to encoder/DataV1.  Added pulnix/TM6740ConfigV2, fccd/FccdConfigV2.
2010-Jun-06	weaver	Tag V02-02-00.  Added some XPP DetInfo entries.  Added TM6740 to xtcreader.
2010-May-18	weaver			Added evr/IOConfigV1 class for describing EVR IO cabling.
2010-Apr30	weaver  Tag V02-00-00.  Changed XtcMonitorServer and XtcMonitorClient to allow multiple clients to
					receive events in parallel or serialized (daisy-chained).
2010-Apr14	weaver			Created app/XtcMonitorServer for use by online and offline shared memory servers.
2010-Apr5       jbt                     Removed SxrSpectrometer from DetInfo.hh - never used, never will be.
2010-Apr2       jbt                     Added Encoder to DetInfo Detector enum.
2010-Mar13      cpo                     Switch from -1 to the max() function in <limits> for "largest 
                                        integer".  Also add in Tomy's new event code sequencing
                                        classes in evr.
2009-Dec14      cpo                     Tag V01-08-00 for Matt's scan data.
2009-Nov22      cpo                     Tag V01-07-00 for pnCCD objects for Andy.
2009-Nov11	weaver			Tag V01-06-00.  Added BldEb to DetInfo.  Added bld BldDataEbeamV0,1.
2009-Nov05      cpo                     Support for pnCCD data (Config and Frame objects).
2009-Nov05	weaver			Added Damage bit ContainsIncomplete to indicate when an
					IncompleteContribution may be found within.
2009-Nov03	weaver			Add simple apps app/bldreader,dmgreader.
2009-Oct30	cpo	Tag V01-05-02.  Put in pragma pack(4) in PVControl.hh and PVMonitor.hh as suggested by Andy.