@@ -5,9 +5,14 @@ libsrcs_evrdata += src/ConfigV1.cc
 libsrcs_evrdata += src/ConfigV2.cc 
 libsrcs_evrdata += src/ConfigV3.cc
 libsrcs_evrdata += src/ConfigV4.cc
+libsrcs_evrdata += src/ConfigV5.cc
 libsrcs_evrdata += src/DataV3.cc
 libsrcs_evrdata += src/EventCodeV3.cc
 libsrcs_evrdata += src/EventCodeV4.cc
+libsrcs_evrdata += src/EventCodeV5.cc
 libsrcs_evrdata += src/PulseConfigV3.cc
 libsrcs_evrdata += src/IOChannel.cc
 libsrcs_evrdata += src/IOConfigV1.cc
+#libsrcs_evrdata += src/IOConfigV2.cc
+libsrcs_evrdata += src/SequencerConfigV1.cc
+libsrcs_evrdata += src/SequencerEntry.cc
