@@ -1,3 +1,4 @@
+2010-Nov-30	weaver	Tag V02-10-00.  Added evr/ConfigV5 and evr/SequencerConfigV1.
 2010-Nov-02     caf     Tag V02-08-05.
 2010-Sep-20	weaver	Tag V02-08-00.	Added Cspad ElementIterator and Config/ElementV2.
 2010-Sep-1	weaver	Tag V02-07-00.  Cspad definitions are stable now.
